--- a/main.ipynb
+++ b/main.ipynb
@@ -11,19 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "hello \n"
      ]
     }
    ],
    "source": [
-    "print(\"hello world\")"
+    "print(\"hello \")"
    ]
   },
   {
