--- a/main.ipynb
+++ b/main.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy"
+    "import numpy\n",
+    "import cv2\n",
+    "import time\n",
+    "import os\n",
+    "import mediapipe as mp \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +38,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "3.11",
    "language": "python",
    "name": "python3"
   },
